--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "Rakesh Kumar Sahoo",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^7.0.0"
   }
 }
